# carve

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mesh.off  poiss_mesh
examples/: CMakeLists.txt  voxel-carving.cpp
include/carve/: carve.h
src/: CMakeLists.txt  VideoReader.cpp  VideoReader.h  voxel-carving.cpp
src/carve/: shared.h
src/carve/ex2utils/: ImplicitSurface.h  MarchingCubes.h  SimpleMesh.h
src/carve/utils/: MarchingCubes.h  SimpleMesh.h  calib.cpp  calib.h  log.h  segment.cpp  segment.h
src/carve/video-reader/: VideoReader.cpp  VideoReader.h
src/carve/voxel-carver/: VoxelCarver.cpp  VoxelCarver.h
src/crv/: Application.cpp  Application.h  VideoReader.cpp  VideoReader.h  VoxelCarver.cpp  VoxelCarver.h  calib.cpp  calib.h  crv.h  log.h  shared.h
src/crv/application/: Application.cpp  Application.h
src/crv/utils/: calib.cpp  calib.h  file.h.in  log.h  segment.cpp  segment.h
src/crv/video-reader/: VideoReader.cpp  VideoReader.h
src/crv/voxel-carver/: VoxelCarver.cpp  VoxelCarver.h
